--- a/Portfolio/css/image-style.scss
+++ b/Portfolio/css/image-style.scss
@@ -1,12 +1,14 @@
 .header-banner {
   width: 100%;
   height: 40rem;
+  box-shadow: 0px 0px 10px grey;
   object-fit: cover;
 }
 .img-body-banner {
   width: 100%;
   height: 30rem;
-  box-shadow: 0px 0px 5px grey;
+  box-shadow: 0px 0px 10px grey;
+  border: solid;
   object-fit: cover;
   margin-top: 10rem;
 }
@@ -29,10 +31,10 @@
 
 .project-thumbnail {
   width: 100%;
-  height: 85%;
-  padding: 16px;
+  height: 22rem;
+  padding: 20px;
   justify-content: space-evenly;
-  /* box-shadow: 0px 0px 5px grey; */
+  box-shadow: 0px 0px 10px grey;
   object-fit: cover;
   transition-duration: 0.8s;
 }
@@ -44,6 +46,7 @@
   justify-content: right;
   object-fit: cover;
   background-color: transparent;
+  box-shadow: 0px 0px 10px grey;
   border: none;
   transition-duration: 0.8s;
 }
@@ -61,13 +64,14 @@
 .project-thumbnail-wrapper {
   overflow: hidden;
   position: relative;
+  box-shadow: 0px 0px 10px grey;
 }
 
 .project-thumbnail-content {
   /* height: 100%; */
   /* width: 100%; */
   position: absolute;
-  top: 23vmax;
+  top: 17rem;
   /* bottom: 0%; */
 
 
@@ -93,7 +97,7 @@
 .project-thumbnail:hover,
 .project-thumbnail:focus {
   display: inline-block;
-  background: #39a773;
+  background: #b820b8;
 }
 
 .image-container{
@@ -107,7 +111,26 @@
   transition-duration: 0.8s;
 }
 
+.img-border{
+  border: solid;
+  border-color: rgb(228, 228, 228);
+}
+
 #intro-banner{
   object-position: 50% 0%;
   opacity: 0.75;
+}
+
+#banner-project-1{
+  object-position: 50% 0%;
+
+}
+
+#banner-project-2{
+  object-position: 50% 0%;
+
+}
+
+#canvas-thumbnail-1{
+  object-position: 30% 0%;
 }
